--- a/clientes.html
+++ b/clientes.html
@@ -6,6 +6,7 @@
 	<title>Layout</title>
 	<link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="static/layout.css">
+	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -24,29 +25,49 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="#" "email me">MenuTeste</a></li>
-	      				<li><a href="#" "teste">teste</a></li>
+	      				<li><a href="#" "email me">Pedidos</a></li>
+	      				<li><a href="../clientes.html" "teste">Clientes</a></li>
+	      				<li><a href="#" "teste">Funcionarios</a></li>
+	      				<li><a href="#" "teste">Restaurante</a></li>
 	      			</ul>
 				</div>
 		  	</div>
 		</nav>
 
-		<div class="jumbotron layout">
+		<div class="jumbotron top-layout">
 			<div class="container text-center">
 			<!-- Conteudo topo -->
+			
+			<h1>Sistema Restaurante</h1>
 
 			<!-- Fim conteudo -->
 			</div>
 		</div>
 	</header>
 	<!-- Conteudo site -->
+		<div class="container text-center conteudo">
+			<h2>Clientes</h2>
+			<div class="container separete-margim">
+				<a href="cadastro/cliente.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR CLIENTE</a>
+			</div>
+			<div class="container separete-margim">
+				<a href="cadastro/cliente.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR CLIENTE</a>
+			</div>
+		</div>
 
 
 	<!-- Fim conteudo -->
-	<footer>
-		<div class="jumbotron layout">
+	<footer class="myFooter">
 			<!-- conteudo rodape -->
-
+		<div class="jumbotron foot-layout">
+			
+		
+			<div class="container text-center ">
+				<ul class="list-inline">
+					<li><p><a>GitHub</a></p></li>
+				</ul>
+				<p>Projetado para a disciplina de banco de dado 1 pelos alunos <a href="">Igor</a> e <a href="">João</a></p>
+			</div>
 			<!-- fim conteudo -->
 		</div>
 	</footer>
