--- a/cadastro/funcionarios.html
+++ b/cadastro/funcionarios.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Layout</title>
-	<link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="static/layout.css">
+	<link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../static/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -28,7 +28,7 @@
 	      				<li><a href="#" "email me">Pedidos</a></li>
 	      				<li><a href="../clientes.html" "teste">Clientes</a></li>
 	      				<li><a href="../funcionarios.html" "teste">Funcionarios</a></li>
-	      				<li><a href="../restaurante.html" "teste">Restaurante</a></li>
+	      				<li><a href="#" "teste">Restaurante</a></li>
 	      			</ul>
 				</div>
 		  	</div>
@@ -45,7 +45,33 @@
 		</div>
 	</header>
 	<!-- Conteudo site -->
-
+	<div class="container conteudo">
+			
+		<h2 class="text-center">Cadastrar Funcionario</h2>
+		<div class="container">
+			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
+				<div class="form-group">
+					<label for="nome_cliente">Nome Funcionario</label>
+					<input type="text" name="nome" id="nome_cliente" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="tel_cliente">Salario Funcionario</label>
+					<input type="tel" name="tel" id="tel_cliente" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="cpf_cliente">Status Funcionario</label>
+					<input type="text" name="cpf" id="cpf_cliente" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="cpf_cliente">Função Funcionario</label>
+					<input type="text" name="cpf" id="cpf_cliente" class="form-control">	
+				</div>
+				<div class="text-center">
+					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
+				</div>
+			</form>
+		</div>
+	</div>
 
 	<!-- Fim conteudo -->
 	<footer class="myFooter">
@@ -62,7 +88,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="static/jquery.js"></script>
-	<script src="static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../static/jquery.js"></script>
+	<script src="../static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
