--- a/restaurante.html
+++ b/restaurante.html
@@ -28,7 +28,7 @@
 	      				<li><a href="#" "email me">Pedidos</a></li>
 	      				<li><a href="../clientes.html" "teste">Clientes</a></li>
 	      				<li><a href="../funcionarios.html" "teste">Funcionarios</a></li>
-	      				<li><a href="../restaurante.html" "teste">Restaurante</a></li>
+	      				<li><a href="#" "teste">Restaurante</a></li>
 	      			</ul>
 				</div>
 		  	</div>
@@ -45,6 +45,19 @@
 		</div>
 	</header>
 	<!-- Conteudo site -->
+		<div class="container text-center conteudo">
+			<h2>Restaurante</h2>
+			<div class="container separete-margim">
+				<a href="cadastro/fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">FORNECEDOR</a>
+			</div>
+			<div class="container separete-margim">
+				<a href="cadastro/fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">CARDAPIO</a>
+			</div>
+			<div class="container separete-margim">
+				<a href="cadastro/fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">MESAS</a>
+			</div>
+			
+		</div>
 
 
 	<!-- Fim conteudo -->
