--- a/clientes.html
+++ b/clientes.html
@@ -27,8 +27,8 @@
 						<!-- Itens Menu -->
 	      				<li><a href="#" "email me">Pedidos</a></li>
 	      				<li><a href="../clientes.html" "teste">Clientes</a></li>
-	      				<li><a href="#" "teste">Funcionarios</a></li>
-	      				<li><a href="#" "teste">Restaurante</a></li>
+	      				<li><a href="../funcionarios.html" "teste">Funcionarios</a></li>
+	      				<li><a href="../restaurante.html" "teste">Restaurante</a></li>
 	      			</ul>
 				</div>
 		  	</div>
