--- a/funcionarios.html
+++ b/funcionarios.html
@@ -45,6 +45,15 @@
 		</div>
 	</header>
 	<!-- Conteudo site -->
+		<div class="container text-center conteudo">
+			<h2>Funcionarios</h2>
+			<div class="container separete-margim">
+				<a href="#" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FUNCIONARIO</a>
+			</div>
+			<div class="container separete-margim">
+				<a href="cadastro/funcionarios.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FUNCIONARIO</a>
+			</div>
+		</div>
 
 
 	<!-- Fim conteudo -->
