--- a/clientes.html
+++ b/clientes.html
@@ -26,7 +26,7 @@
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
 	      				<li><a href="#" "email me">Pedidos</a></li>
-	      				<li><a href="../clientes.html" "teste">Clientes</a></li>
+	      				<li><a href="./clientes.html" "teste">Clientes</a></li>
 	      				<li><a href="#" "teste">Funcionarios</a></li>
 	      				<li><a href="#" "teste">Restaurante</a></li>
 	      			</ul>
