--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Layout</title>
+	<title>Home</title>
 	<link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="static/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
@@ -20,7 +20,7 @@
 		        		<span class="icon-bar"></span>
 		        		<span class="icon-bar"></span>
 		      		</button>
-		      		<a class="navbar-brand" href="#">Home</a>
+		      		<a class="navbar-brand" href="./index.html">Home</a>
 		    	</div>
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
@@ -45,6 +45,32 @@
 		</div>
 	</header>
 	<!-- Conteudo site -->
+		<div class="container text-center conteudo">
+			<h2>Boa Noite!</h2>
+			<h3>dia/mes/ano</h3>
+			<br>
+			<hr>
+			<!-- <h2>Pedidos Pendentes</h2> -->
+			<table class="table table-bordered">
+				<caption class="text-center"><h2>Pedidos Pendentes</h2></caption>
+				<thead>
+					<tr>
+							<th>Nº Pedido</th>
+						<th>Mesas</th>
+						<th>Itens/Quantidades</th>
+						<th>status</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>Mesa 1</td>
+						<td>Frango : 1und, </td>
+						<td>Pendente</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 
 
 	<!-- Fim conteudo -->
