--- a/index.html
+++ b/index.html
@@ -51,25 +51,29 @@
 			<br>
 			<hr>
 			<!-- <h2>Pedidos Pendentes</h2> -->
-			<table class="table table-bordered">
-				<caption class="text-center"><h2>Pedidos Pendentes</h2></caption>
-				<thead>
-					<tr>
-							<th>Nº Pedido</th>
-						<th>Mesas</th>
-						<th>Itens/Quantidades</th>
-						<th>status</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>1</td>
-						<td>Mesa 1</td>
-						<td>Frango : 1und, </td>
-						<td>Pendente</td>
-					</tr>
-				</tbody>
-			</table>
+			<div>
+				<table class="table-bordered table-condensed table-responsive">
+					<caption class="text-center"><h2>Pedidos Pendentes</h2></caption>
+					<thead>
+						<tr>
+								<th>Nº<wbr></wbr>Pedido</th>
+							<th>Mesas</th>
+							<th>Itens/<wbr></wbr>Quantidades</th>
+							<th>status</th>
+						</tr>
+					</thead>
+					<tbody>
+					<!-- Loop -->
+						<tr>
+							<td>1</td>
+							<td>Mesa 1</td>
+							<td>Frango<br>1und, </td>
+							<td>Pendente</td>
+						</tr>
+					<!-- Fim Loop -->
+					</tbody>
+				</table>
+			</div>
 		</div>
 
 
