--- a/clientes.html
+++ b/clientes.html
@@ -48,7 +48,7 @@
 		<div class="container text-center conteudo">
 			<h2>Clientes</h2>
 			<div class="container separete-margim">
-				<a href="cadastro/cliente.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR CLIENTE</a>
+				<a href="./selecionar_cliente.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR CLIENTE</a>
 			</div>
 			<div class="container separete-margim">
 				<a href="cadastro/cliente.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR CLIENTE</a>
