--- a/selecionar_cliente.html
+++ b/selecionar_cliente.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Layout</title>
-	<link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../static/layout.css">
+	<link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="static/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -20,15 +20,15 @@
 		        		<span class="icon-bar"></span>
 		        		<span class="icon-bar"></span>
 		      		</button>
-		      		<a class="navbar-brand" href="../index.html">Home</a>
+		      		<a class="navbar-brand" href="./index.html">Home</a>
 		    	</div>
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
 	      				<li><a href="#">Pedidos</a></li>
-	      				<li><a href="../clientes.html">Clientes</a></li>
-	      				<li><a href="../funcionarios.html">Funcionarios</a></li>
-	      				<li><a href="../restaurante.html">Restaurante</a></li>
+	      				<li><a href="./clientes.html">Clientes</a></li>
+	      				<li><a href="./funcionarios.html">Funcionarios</a></li>
+	      				<li><a href="./restaurante.html">Restaurante</a></li>
 	      			</ul>
 				</div>
 		  	</div>
@@ -45,27 +45,40 @@
 		</div>
 	</header>
 	<!-- Conteudo site -->
+
 	<div class="container conteudo">
-			
-		<h2 class="text-center">Cadastrar Cliente</h2>
+		<div class=" container text-center">	
+			<h2>Selecionar Funcionario</h2>
+		</div>	
 		<div class="container">
-			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
+			<!-- Pesquisa simples -->
+			<form action="#" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_cliente">Nome Cliente</label>
-					<input type="text" name="nome" id="nome_cliente" class="form-control">	
-				</div>
-				<div class="form-group">
-					<label for="tel_cliente">Telefone Cliente</label>
-					<input type="tel" name="tel" id="tel_cliente" class="form-control">	
-				</div>
-				<div class="form-group">
-					<label for="cpf_cliente">CPF Cliente</label>
-					<input type="text" name="cpf" id="cpf_cliente" class="form-control">	
-				</div>
-				<div class="text-center">
-					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
+					<label for="nome_cliente">Nome Funcionario</label>
+					<div class="input-group">
+						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca cliente pelo nome">
+						    <span class="input-group-btn">
+						    	<button type="submit" class="btn btn-danger">Buscar!</button>
+							</span>
+					</div>
 				</div>
 			</form>
+			<hr>
+			<!-- pesquisa Complexa -->
+			<form action="#" method="post" accept-charset="utf-8">
+				<div class="form-group">
+					<label for="nome_cliente">Algo complexo</label>
+					<div class="input-group">
+						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca cliente por algo">
+						    <span class="input-group-btn">
+						    	<button type="submit" class="btn btn-danger">Buscar!</button>
+							</span>
+					</div>
+				</div>
+			</form>
+
+			<!-- pesquisa Complexa2 -->
+			<!-- etc -->
 		</div>
 	</div>
 
@@ -84,7 +97,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="../static/jquery.js"></script>
-	<script src="../static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="static/jquery.js"></script>
+	<script src="static/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
