--- a/prototipo_telas/cadastro/cadastro_chefe.html
+++ b/prototipo_telas/cadastro/cadastro_chefe.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Layout</title>
-	<link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="static/layout.css">
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -20,15 +20,15 @@
 		        		<span class="icon-bar"></span>
 		        		<span class="icon-bar"></span>
 		      		</button>
-		      		<a class="navbar-brand" href="./index.html">Home</a>
+		      		<a class="navbar-brand" href="../index.html">Home</a>
 		    	</div>
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="#">Pedidos</a></li>
-	      				<li><a href="./clientes.html">Clientes</a></li>
-	      				<li><a href="./funcionarios.html">Funcionarios</a></li>
-	      				<li><a href="./restaurante.html">Restaurante</a></li>
+	      				<li><a href="../pedidos.html">Pedidos</a></li>
+	      				<li><a href="../clientes.html">Clientes</a></li>
+	      				<li><a href="../funcionarios.html">Funcionarios</a></li>
+	      				<li><a href="../restaurante.html">Restaurante</a></li>
 	      			</ul>
 				</div>
 		  	</div>
@@ -45,16 +45,33 @@
 		</div>
 	</header>
 	<!-- Conteudo site -->
-		<div class="container text-center conteudo">
-			<h2>Funcionarios</h2>
-			<div class="container separete-margim">
-				<a href="#" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FUNCIONARIO</a>
-			</div>
-			<div class="container separete-margim">
-				<a href="cadastro/funcionarios.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FUNCIONARIO</a>
-			</div>
+	<div class="container conteudo">
+			
+		<h2 class="text-center">Cadastrar Funcionario</h2>
+		<div class="container">
+			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
+				<div class="form-group">
+					<label for="nome_cliente">Nome Funcionario</label>
+					<input type="text" name="nome_chefe" id="nome_chefe" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="tel_cliente">Salario Funcionario</label>
+					<input type="tel" name="sal_chefe" id="sal_chefe" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="cpf_cliente">CPF</label>
+					<input type="text" name="cpf_chefe" id="cpf_chefe" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="cpf_cliente">CPF do superior</label>
+					<input type="text" name="superior" id="superior" class="form-control">	
+				</div>
+				<div class="text-center">
+					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
+				</div>
+			</form>
 		</div>
-
+	</div>
 
 	<!-- Fim conteudo -->
 	<footer class="myFooter">
@@ -71,7 +88,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="static/jquery.js"></script>
-	<script src="static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../jquery.js"></script>
+	<script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
