--- a/prototipo_telas/cadastro/cadastro_garcom.html
+++ b/prototipo_telas/cadastro/cadastro_garcom.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Layout</title>
-	<link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../static/layout.css">
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -25,7 +25,7 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="#">Pedidos</a></li>
+	      				<li><a href="./pedidos.html">Pedidos</a></li>
 	      				<li><a href="../clientes.html">Clientes</a></li>
 	      				<li><a href="../funcionarios.html">Funcionarios</a></li>
 	      				<li><a href="../restaurante.html">Restaurante</a></li>
@@ -58,14 +58,6 @@
 					<label for="tel_cliente">Salario Funcionario</label>
 					<input type="tel" name="tel" id="tel_cliente" class="form-control">	
 				</div>
-				<div class="form-group">
-					<label for="cpf_cliente">Status Funcionario</label>
-					<input type="text" name="cpf" id="cpf_cliente" class="form-control">	
-				</div>
-				<div class="form-group">
-					<label for="cpf_cliente">Função Funcionario</label>
-					<input type="text" name="cpf" id="cpf_cliente" class="form-control">	
-				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
 				</div>
@@ -88,7 +80,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="../static/jquery.js"></script>
-	<script src="../static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../jquery.js"></script>
+	<script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
