--- a/prototipo_telas/cadastro/cadastro_restaurante.html
+++ b/prototipo_telas/cadastro/cadastro_restaurante.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Layout</title>
-	<link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../static/layout.css">
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -23,9 +23,9 @@
 		      		<a class="navbar-brand" href="../index.html">Home</a>
 		    	</div>
 		    	<div class="collapse navbar-collapse" id="menu">
-					<ul class="nav navbar-nav">
+					<ul class="nav navbar-nav">./pedidos.html
 						<!-- Itens Menu -->
-	      				<li><a href="#">Pedidos</a></li>
+	      				<li><a href="./pedidos.html">Pedidos</a></li>
 	      				<li><a href="../clientes.html">Clientes</a></li>
 	      				<li><a href="../funcionarios.html">Funcionarios</a></li>
 	      				<li><a href="../restaurante.html">Restaurante</a></li>
@@ -88,7 +88,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="../static/jquery.js"></script>
-	<script src="../static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../jquery.js"></script>
+	<script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
