--- a/prototipo_telas/index.html
+++ b/prototipo_telas/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Layout</title>
-	<link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="static/layout.css">
+	<title>Home</title>
+	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -25,7 +25,7 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="#">Pedidos</a></li>
+	      				<li><a href="./pedidos.html">Pedidos</a></li>
 	      				<li><a href="./clientes.html">Clientes</a></li>
 	      				<li><a href="./funcionarios.html">Funcionarios</a></li>
 	      				<li><a href="./restaurante.html">Restaurante</a></li>
@@ -45,42 +45,37 @@
 		</div>
 	</header>
 	<!-- Conteudo site -->
-
-	<div class="container conteudo">
-		<div class=" container text-center">	
-			<h2>Selecionar Funcionario</h2>
-		</div>	
-		<div class="container">
-			<!-- Pesquisa simples -->
-			<form action="#" method="post" accept-charset="utf-8">
-				<div class="form-group">
-					<label for="nome_cliente">Nome Funcionario</label>
-					<div class="input-group">
-						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca cliente pelo nome">
-						    <span class="input-group-btn">
-						    	<button type="submit" class="btn btn-danger">Buscar!</button>
-							</span>
-					</div>
-				</div>
-			</form>
+		<div class="container text-center conteudo">
+			<h2>Boa Noite!</h2>
+			<h3>dia/mes/ano</h3>
+			<br>
 			<hr>
-			<!-- pesquisa Complexa -->
-			<form action="#" method="post" accept-charset="utf-8">
-				<div class="form-group">
-					<label for="nome_cliente">Algo complexo</label>
-					<div class="input-group">
-						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca cliente por algo">
-						    <span class="input-group-btn">
-						    	<button type="submit" class="btn btn-danger">Buscar!</button>
-							</span>
-					</div>
-				</div>
-			</form>
-
-			<!-- pesquisa Complexa2 -->
-			<!-- etc -->
+			<!-- <h2>Pedidos Pendentes</h2> -->
+			<div>
+				<table class="table table-bordered table-responsive">
+					<caption class="text-center"><h2>Pedidos Pendentes</h2></caption>
+					<thead>
+						<tr>
+							<th class="text-center">Nº<wbr></wbr>Pedido</th>
+							<th class="text-center">Mesas</th>
+							<th class="text-center">Itens/<wbr></wbr>Quantidades</th>
+							<th class="text-center">status</th>
+						</tr>
+					</thead>
+					<tbody>
+					<!-- Loop -->
+						<tr>
+							<td><a href="#">1</a></td>
+							<td><a href="#">Mesa 1</a></td>
+							<td><a href="#">Frango<wbr>1und</a></td>
+							<td><a href="#">Pendente</a></td>
+						</tr>
+					<!-- Fim Loop -->
+					</tbody>
+				</table>
+			</div>
 		</div>
-	</div>
+
 
 	<!-- Fim conteudo -->
 	<footer class="myFooter">
@@ -97,7 +92,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="static/jquery.js"></script>
-	<script src="static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="./jquery.js"></script>
+	<script src="./bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
