--- a/prototipo_telas/listar_resultados.html
+++ b/prototipo_telas/listar_resultados.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Layout</title>
-	<link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="static/layout.css">
+	<title>Home</title>
+	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -25,7 +25,7 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="#">Pedidos</a></li>
+	      				<li><a href="./pedidos.html">Pedidos</a></li>
 	      				<li><a href="./clientes.html">Clientes</a></li>
 	      				<li><a href="./funcionarios.html">Funcionarios</a></li>
 	      				<li><a href="./restaurante.html">Restaurante</a></li>
@@ -46,12 +46,25 @@
 	</header>
 	<!-- Conteudo site -->
 		<div class="container text-center conteudo">
-			<h2>Clientes</h2>
-			<div class="container separete-margim">
-				<a href="./selecionar_cliente.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR CLIENTE</a>
-			</div>
-			<div class="container separete-margim">
-				<a href="cadastro/cliente.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR CLIENTE</a>
+			<!-- resultados busca -->
+			<div>
+				<table class="table table-bordered table-responsive">
+					<caption class="text-center"><h2>Resultados</h2></caption>
+					<thead class="text-center">
+						<tr>
+							<th class="text-center">Nº<wbr></wbr>cliente</th>
+							<th class="text-center">Nome</th>
+						</tr>
+					</thead>
+					<tbody>
+					<!-- Loop -->
+						<tr>
+							<td><a href="#">1</a></td>
+							<td><a href="#">Fulano da Silva</a></td>
+						</tr>
+					<!-- Fim Loop -->
+					</tbody>
+				</table>
 			</div>
 		</div>
 
@@ -71,7 +84,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="static/jquery.js"></script>
-	<script src="static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="./jquery.js"></script>
+	<script src="./bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
