icon, fornecedor, logo, titulo

--- a/prototipo_telas/cadastrar_funcionarios.html
+++ b/prototipo_telas/cadastrar_funcionarios.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Layout</title>
+	<title>Myr</title>
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Palanquin:100" rel="stylesheet">
+	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" /> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -38,8 +40,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<h1>Sistema Restaurante</h1>
-
+			<p><img src="lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 			<!-- Fim conteudo -->
 			</div>
 		</div>
@@ -51,7 +52,7 @@
 				<a href="./cadastro/cadastro_garcom.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR GARÇOM</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="./cadastro/cadastro_chefe.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR CHEFE</a>
+				<a href="./cadastro/cadastro_chefe.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR COZINHEIRO</a>
 			</div>
 		</div>
 
