--- a/prototipo_telas/restaurante.html
+++ b/prototipo_telas/restaurante.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Layout</title>
+	<title>Myr</title>
+	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
@@ -38,7 +39,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<h1>Sistema Restaurante</h1>
+			<p><img src="lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
@@ -48,13 +49,13 @@
 		<div class="container text-center conteudo">
 			<h2>Restaurante</h2>
 			<div class="container separete-margim">
-				<a href="cadastro/cadastro_fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">FORNECEDOR</a>
+				<a href="./fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">FORNECEDOR</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="cadastro/cadastro_pratos.html" class="btn btn-danger btn-block btn-lg my-btn">CARDAPIO</a>
+				<a href="./pratos.html" class="btn btn-danger btn-block btn-lg my-btn">CARDAPIO</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="cadastro/cadastro_mesa.html" class="btn btn-danger btn-block btn-lg my-btn">MESAS</a>
+				<a href="./mesa.html" class="btn btn-danger btn-block btn-lg my-btn">MESAS</a>
 			</div>
 			
 		</div>
