--- a/prototipo_telas/fornecedor.html
+++ b/prototipo_telas/fornecedor.html
@@ -47,12 +47,12 @@
 	</header>
 	<!-- Conteudo site -->
 		<div class="container text-center conteudo">
-			<h2>Pedidos</h2>
+			<h2>Fornecedor</h2>
 			<div class="container separete-margim">
-				<a href="#" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR PEDIDO</a>
+				<a href="./selecionar_fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FORNECEDOR</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="#" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR PEDIDO</a>
+				<a href="cadastro/cadastro_fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FORNECEDOR</a>
 			</div>
 		</div>
 
