--- a/prototipo_telas/index.html
+++ b/prototipo_telas/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Home</title>
+	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
@@ -38,7 +39,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<h1>Sistema Restaurante</h1>
+			<p><img src="lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
