--- a/prototipo_telas/cadastro/cadastro_restaurante.html
+++ b/prototipo_telas/cadastro/cadastro_restaurante.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
+	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
