--- a/prototipo_telas/cadastro/cadastro_cliente.html
+++ b/prototipo_telas/cadastro/cadastro_cliente.html
@@ -39,7 +39,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<p><img src="lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
+			<p><img src="../lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
