--- a/prototipo_telas/cadastro/cadastro_garcom.html
+++ b/prototipo_telas/cadastro/cadastro_garcom.html
@@ -38,7 +38,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<h1>Sistema Restaurante</h1>
+			<p><img src="../lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
