--- a/prototipo_telas/restaurante.html
+++ b/prototipo_telas/restaurante.html
@@ -26,7 +26,7 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="#">Pedidos</a></li>
+	      				<li><a href="./pedidos.html">Pedidos</a></li>
 	      				<li><a href="./clientes.html">Clientes</a></li>
 	      				<li><a href="./funcionarios.html">Funcionarios</a></li>
 	      				<li><a href="./restaurante.html">Restaurante</a></li>
@@ -52,7 +52,7 @@
 				<a href="./fornecedor.html" class="btn btn-danger btn-block btn-lg my-btn">FORNECEDOR</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="./pratos.html" class="btn btn-danger btn-block btn-lg my-btn">CARDAPIO</a>
+				<a href="./cardapio.html" class="btn btn-danger btn-block btn-lg my-btn">CARDAPIO</a>
 			</div>
 			<div class="container separete-margim">
 				<a href="./mesa.html" class="btn btn-danger btn-block btn-lg my-btn">MESAS</a>
