--- a/prototipo_telas/cadastro/cadastro_garcom.html
+++ b/prototipo_telas/cadastro/cadastro_garcom.html
@@ -25,7 +25,7 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="./pedidos.html">Pedidos</a></li>
+	      				<li><a href="../pedidos.html">Pedidos</a></li>
 	      				<li><a href="../clientes.html">Clientes</a></li>
 	      				<li><a href="../funcionarios.html">Funcionarios</a></li>
 	      				<li><a href="../restaurante.html">Restaurante</a></li>
