--- a/prototipo_telas/cadastro/cadastro_restaurante.html
+++ b/prototipo_telas/cadastro/cadastro_restaurante.html
@@ -26,7 +26,7 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">./pedidos.html
 						<!-- Itens Menu -->
-	      				<li><a href="./pedidos.html">Pedidos</a></li>
+	      				<li><a href="../pedidos.html">Pedidos</a></li>
 	      				<li><a href="../clientes.html">Clientes</a></li>
 	      				<li><a href="../funcionarios.html">Funcionarios</a></li>
 	      				<li><a href="../restaurante.html">Restaurante</a></li>
