--- a/prototipo_telas/cardapio.html
+++ b/prototipo_telas/cardapio.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />	
 	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./layout.css">
@@ -27,7 +26,7 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="./pedidos">Pedidos</a></li>
+	      				<li><a href="./pedidos.html">Pedidos</a></li>
 	      				<li><a href="./clientes.html">Clientes</a></li>
 	      				<li><a href="./funcionarios.html">Funcionarios</a></li>
 	      				<li><a href="./restaurante.html">Restaurante</a></li>
@@ -47,42 +46,22 @@
 		</div>
 	</header>
 	<!-- Conteudo site -->
-
-	<div class="container conteudo">
-		<div class=" container text-center">	
-			<h2>Selecionar Fornecedor</h2>
-		</div>	
-		<div class="container">
-			<!-- Pesquisa simples -->
-			<form action="#" method="post" accept-charset="utf-8">
-				<div class="form-group">
-					<label for="nome_cliente">Nome Fornecedor</label>
-					<div class="input-group">
-						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca fornecedor pelo nome">
-						    <span class="input-group-btn">
-						    	<button type="submit" class="btn btn-danger">Buscar!</button>
-							</span>
-					</div>
-				</div>
-			</form>
-			<hr>
-			<!-- pesquisa Complexa -->
-			<form action="#" method="post" accept-charset="utf-8">
-				<div class="form-group">
-					<label for="nome_cliente">Algo complexo</label>
-					<div class="input-group">
-						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca fornecedor por algo">
-						    <span class="input-group-btn">
-						    	<button type="submit" class="btn btn-danger">Buscar!</button>
-							</span>
-					</div>
-				</div>
-			</form>
-
-			<!-- pesquisa Complexa2 -->
-			<!-- etc -->
+		<div class="container text-center conteudo">
+			<h2>Cardapio</h2>
+			<div class="container separete-margim">
+				<a href="./selecionar_prato.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR PRATO</a>
+			</div>
+			<div class="container separete-margim">
+				<a href="cadastro/cadastro_prato.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR PRATO</a>
+			</div>
+			<div class="container separete-margim">
+				<a href="./selecionar_ingrediente.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR INGREDIENTE</a>
+			</div>
+			<div class="container separete-margim">
+				<a href="cadastro/cadastro_ingredientes.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR INGREDIENTE</a>
+			</div>
 		</div>
-	</div>
+
 
 	<!-- Fim conteudo -->
 	<footer class="myFooter">
