--- a/prototipo_telas/pedidos.html
+++ b/prototipo_telas/pedidos.html
@@ -49,10 +49,10 @@
 		<div class="container text-center conteudo">
 			<h2>Pedidos</h2>
 			<div class="container separete-margim">
-				<a href="#" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR PEDIDO</a>
+				<a href="./selecionar_pedido.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR PEDIDO</a>
 			</div>
 			<div class="container separete-margim">
-				<a href="#" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR PEDIDO</a>
+				<a href="cadastro/cadastro_pedido.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR PEDIDO</a>
 			</div>
 		</div>
 
