--- a/prototipo_telas/selecionar_ingrediente.html
+++ b/prototipo_telas/selecionar_ingrediente.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />	
 	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./layout.css">
@@ -27,7 +26,7 @@
 		    	<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
-	      				<li><a href="./pedidos">Pedidos</a></li>
+	      				<li><a href="./pedidos.html">Pedidos</a></li>
 	      				<li><a href="./clientes.html">Clientes</a></li>
 	      				<li><a href="./funcionarios.html">Funcionarios</a></li>
 	      				<li><a href="./restaurante.html">Restaurante</a></li>
@@ -50,15 +49,15 @@
 
 	<div class="container conteudo">
 		<div class=" container text-center">	
-			<h2>Selecionar Fornecedor</h2>
+			<h2>Selecionar Ingredientes</h2>
 		</div>	
 		<div class="container">
 			<!-- Pesquisa simples -->
 			<form action="#" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_cliente">Nome Fornecedor</label>
+					<label for="nome_cliente">Nome Ingrediente</label>
 					<div class="input-group">
-						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca fornecedor pelo nome">
+						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca ingrediente pelo nome">
 						    <span class="input-group-btn">
 						    	<button type="submit" class="btn btn-danger">Buscar!</button>
 							</span>
@@ -71,7 +70,7 @@
 				<div class="form-group">
 					<label for="nome_cliente">Algo complexo</label>
 					<div class="input-group">
-						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca fornecedor por algo">
+						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca ingrediente por algo">
 						    <span class="input-group-btn">
 						    	<button type="submit" class="btn btn-danger">Buscar!</button>
 							</span>
