--- a/prototipo_telas/cadastro/cadastro_garcom.html
+++ b/prototipo_telas/cadastro/cadastro_garcom.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Layout</title>
+	<title>Myr</title>
+	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../layout.css">
+	<link rel="stylesheet" href="../css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -38,7 +39,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<p><img src="../lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
+			<p><img src="../img/lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
@@ -80,7 +81,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="../jquery.js"></script>
+	<script src="../js/jquery.js"></script>
 	<script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
