--- a/prototipo_telas/cadastro/cadastro_restaurante.html
+++ b/prototipo_telas/cadastro/cadastro_restaurante.html
@@ -6,7 +6,7 @@
 	<title>Myr</title>
 	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../layout.css">
+	<link rel="stylesheet" href="../css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -24,7 +24,7 @@
 		      		<a class="navbar-brand" href="../index.html">Home</a>
 		    	</div>
 		    	<div class="collapse navbar-collapse" id="menu">
-					<ul class="nav navbar-nav">./pedidos.html
+					<ul class="nav navbar-nav">
 						<!-- Itens Menu -->
 	      				<li><a href="../pedidos.html">Pedidos</a></li>
 	      				<li><a href="../clientes.html">Clientes</a></li>
@@ -39,7 +39,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<p><img src="../lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
+			<p><img src="../img/lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
@@ -89,7 +89,7 @@
 			<!-- fim conteudo -->
 		</div>
 	</footer>
-	<script src="../jquery.js"></script>
+	<script src="../js/jquery.js"></script>
 	<script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
