Atualização label, input e layout

--- a/prototipo_telas/exibir_cliente.html
+++ b/prototipo_telas/exibir_cliente.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="./img/lorenzo.ico" type="image/x-icon" /> 
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="./layout.css">
+	<link rel="stylesheet" href="./css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -39,7 +39,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<p><img src="lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
+			<p><img src="./img/lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
@@ -49,11 +49,11 @@
 	<div class="container text-justify">
 		<h2 class="text-center">Cliente</h2>
 		<ul class="my-list">
-			<li><p><div class="estilo">ID:</div> id do cara</p></li>
+			<li><p><div class="estilo">ID:</div> ID do cliente</p></li>
 			<hr>
-			<li><p><div class="estilo">Nome:</div> Nome do Cara <br> <a href="#">alterar</a></p></li>
+			<li><p><div class="estilo">Nome:</div> Nome do Cliente <br> <a href="#">alterar</a></p></li>
 			<hr>
-			<li><p><div class="estilo">cpf:</div> cpf do cara <br> <a href="#">alterar</a></p></li>
+			<li><p><div class="estilo">cpf:</div> CPF do cliente <br> <a href="#">alterar</a></p></li>
 			<hr>
 			<li><p><div class="estilo">telefone:</div> telefone cidadão <br> <a href="#">alterar</a></p></li>
 		</ul>
