--- a/prototipo_telas/selecionar_prato.html
+++ b/prototipo_telas/selecionar_prato.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="./img/lorenzo.ico" type="image/x-icon" /> 
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="./layout.css">
+	<link rel="stylesheet" href="./css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -39,7 +39,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<p><img src="lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
+			<p><img src="./img/lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
@@ -55,9 +55,9 @@
 			<!-- Pesquisa simples -->
 			<form action="#" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_cliente">Nome Prato</label>
+					<label for="nome_prato">Nome Prato</label>
 					<div class="input-group">
-						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca prato pelo nome">
+						<input type="text" name="nome_prato" id="nome_prato" class="form-control" placeholder="Busca prato pelo nome">
 						    <span class="input-group-btn">
 						    	<button type="submit" class="btn btn-danger">Buscar!</button>
 							</span>
@@ -68,9 +68,9 @@
 			<!-- pesquisa Complexa -->
 			<form action="#" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_cliente">Algo complexo</label>
+					<label for="nome_prato">Algo complexo</label>
 					<div class="input-group">
-						<input type="text" name="nome" id="nome_cliente" class="form-control" placeholder="Busca prato por algo">
+						<input type="text" name="nome_prato" id="nome_prato" class="form-control" placeholder="Busca prato por algo">
 						    <span class="input-group-btn">
 						    	<button type="submit" class="btn btn-danger">Buscar!</button>
 							</span>
