--- a/prototipo_telas/cadastro/cadastro_chefe.html
+++ b/prototipo_telas/cadastro/cadastro_chefe.html
@@ -7,6 +7,7 @@
 	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/layout.css">
+	<link rel="shortcut icon" href="../img/lorenzo.ico" type="image/x-icon" /> 
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -52,20 +53,20 @@
 		<div class="container">
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_cliente">Nome Funcionario</label>
-					<input type="text" name="nome_chefe" id="nome_chefe" class="form-control">	
+					<label for="nome_cozinheiro">Nome Funcionario</label>
+					<input type="text" name="nome_cozinheiro" id="nome_cozinheiro" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="tel_cliente">Salario Funcionario</label>
-					<input type="tel" name="sal_chefe" id="sal_chefe" class="form-control">	
+					<label for="sal_cozinheiro">Salario Funcionario</label>
+					<input type="text" name="sal_cozinheiro" id="sal_cozinheiro" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="cpf_cliente">CPF</label>
-					<input type="text" name="cpf_chefe" id="cpf_chefe" class="form-control">	
+					<label for="cpf_cozinheiro">CPF</label>
+					<input type="text" name="cpf_cozinheiro" id="cpf_cozinheiro" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="cpf_cliente">CPF do superior</label>
-					<input type="text" name="superior" id="superior" class="form-control">	
+					<label for="cpf_cozinheiro">CPF do superior</label>
+					<input type="text" name="cpf_cozinheiro" id="cpf_cozinheiro" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
