--- a/prototipo_telas/cadastro/cadastro_cliente.html
+++ b/prototipo_telas/cadastro/cadastro_cliente.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="../img/lorenzo.ico" type="image/x-icon" /> 
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
@@ -53,15 +53,15 @@
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="nome_cliente">Nome Cliente</label>
-					<input type="text" name="nome" id="nome_cliente" class="form-control">	
+					<input type="text" name="nome_cliente" id="nome_cliente" class="form-control">	
 				</div>
 				<div class="form-group">
 					<label for="tel_cliente">Telefone Cliente</label>
-					<input type="tel" name="tel" id="tel_cliente" class="form-control">	
+					<input type="tel" name="tel_cliente" id="tel_cliente" class="form-control">	
 				</div>
 				<div class="form-group">
 					<label for="cpf_cliente">CPF Cliente</label>
-					<input type="text" name="cpf" id="cpf_cliente" class="form-control">	
+					<input type="text" name="cpf_cliente" id="cpf_cliente" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
