--- a/prototipo_telas/cadastro/cadastro_fornecedor.html
+++ b/prototipo_telas/cadastro/cadastro_fornecedor.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="../img/lorenzo.ico" type="image/x-icon" /> 
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
@@ -52,12 +52,12 @@
 		<div class="container">
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_cliente">Nome Fornecedor</label>
-					<input type="text" name="nome_chefe" id="nome_chefe" class="form-control">	
+					<label for="nome_fornecedor">Nome Fornecedor</label>
+					<input type="text" name="nome_fornecedor" id="nome_fornecedor" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="tel_cliente">Telefone Fornecedor</label>
-					<input type="tel" name="sal_chefe" id="sal_chefe" class="form-control">	
+					<label for="tel_fornecedor">Telefone Fornecedor</label>
+					<input type="tel" name="tel_fornecedor" id="tel_fornecedor" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
