--- a/prototipo_telas/cadastro/cadastro_pedido.html
+++ b/prototipo_telas/cadastro/cadastro_pedido.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="../img/lorenzo.ico" type="image/x-icon" /> 
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
@@ -53,7 +53,7 @@
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<!-- Com o numero da mesa é possivel descobrir o id do cliente que fez a reserva -->
-					<label for="nome_cliente">Numero Mesa</label>
+					<label for="nro_Mesa">Numero Mesa</label>
 					<input type="text" name="nroMesa" id="nroMesa" class="form-control">	
 				</div>
 				<div class="text-center">
