--- a/prototipo_telas/cadastro/cadastro_prato.html
+++ b/prototipo_telas/cadastro/cadastro_prato.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="../img/lorenzo.ico" type="image/x-icon" /> 
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
@@ -52,8 +52,8 @@
 		<div class="container">
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_cliente">Nome Prato</label>
-					<input type="text" name="nome" id="nome_cliente" class="form-control">	
+					<label for="nome_prato">Nome Prato</label>
+					<input type="text" name="nome_prato" id="nome_prato" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
