--- a/prototipo_telas/cadastro/cadastro_reservas.html
+++ b/prototipo_telas/cadastro/cadastro_reservas.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="../img/lorenzo.ico" type="image/x-icon" /> 
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
@@ -52,16 +52,16 @@
 		<div class="container">
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
-					<label for="nome_cliente">Data Reserva</label>
-					<input type="text" name="nome_chefe" id="nome_chefe" class="form-control">	
+					<label for="data_reserva">Data Reserva</label>
+					<input type="text" name="data_reserva" id="data_reserva" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="tel_cliente">Hora Reserva</label>
-					<input type="text" name="sal_chefe" id="sal_chefe" class="form-control">	
+					<label for="hora_reserva">Hora Reserva</label>
+					<input type="text" name="hora_reserva" id="hora_reserva" class="form-control">	
 				</div>
 				<div class="form-group">
-					<label for="tel_cliente">Numero de Pessoas Reserva</label>
-					<input type="tel" name="sal_chefe" id="sal_chefe" class="form-control">	
+					<label for="numero_pessoas_reserva">Numero de Pessoas Reserva</label>
+					<input type="text" name="numero_pessoas_reserva" id="numero_pessoas_reserva" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
