--- a/prototipo_telas/funcionarios.html
+++ b/prototipo_telas/funcionarios.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Myr</title>
-	<link rel="shortcut icon" href="lorenzo.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="./img/lorenzo.ico" type="image/x-icon" /> 
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="./layout.css">
+	<link rel="stylesheet" href="./css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -39,8 +39,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<p><img src="lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
-
+			<p><img src="./img/lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 			<!-- Fim conteudo -->
 			</div>
 		</div>
@@ -49,7 +48,7 @@
 		<div class="container text-center conteudo">
 			<h2>Funcionarios</h2>
 			<div class="container separete-margim">
-				<a href="#" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FUNCIONARIO</a>
+				<a href="./selecionar_funcionario.html" class="btn btn-danger btn-block btn-lg my-btn">SELECIONAR FUNCIONARIO</a>
 			</div>
 			<div class="container separete-margim">
 				<a href="./cadastrar_funcionarios.html" class="btn btn-danger btn-block btn-lg my-btn">CADASTRAR FUNCIONARIO</a>
