--- a/prototipo_telas/layout.html
+++ b/prototipo_telas/layout.html
@@ -5,8 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Layout</title>
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="./layout.css">
+	<link rel="stylesheet" href="./css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
+	<link rel="shortcut icon" href="./img/lorenzo.ico" type="image/x-icon" /> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -38,7 +39,7 @@
 			<div class="container text-center">
 			<!-- Conteudo topo -->
 			
-			<h1>Sistema Restaurante</h1>
+			<p><img src="./img/lorenzo.png" height="150" width="150"></p><h1>My Restaurant</h1>
 
 			<!-- Fim conteudo -->
 			</div>
